--- a/frontend/candidateReg.html
+++ b/frontend/candidateReg.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK E-Voting System - Candidate Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="../backend/js/validator001.js"></script>
     <style>
-        /* Additional CSS for custom styling */
+        body {
+            background-image: url("https://i.ibb.co/8XYcxyQ/photo-2024-05-22-23-45-35.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            backdrop-filter: brightness(50%) blur(3px);
+        }
+
         .form-label {
             font-weight: bold;
         }
 
         .form-input {
+            padding: 2px;
             border-width: 1px;
             border-color: #CBD5E0;
         }
@@ -67,13 +75,15 @@
                 <div class="col-span-2 sm:col-span-1">
                     <label for="citizenship" class="form-label">
                         Citizenship:
-                        <input type="text" id="citizenship" name="citizenship" class="form-input mt-1 w-full rounded-md">
+                        <input type="text" id="citizenship" name="citizenship"
+                            class="form-input mt-1 w-full rounded-md">
                     </label>
                 </div>
                 <div class="col-span-2 sm:col-span-1">
                     <label for="party_affiliation" class="form-label">
                         Party:
-                        <input type="text" id="party_affiliation" name="party_affiliation" class="form-input mt-1 w-full rounded-md">
+                        <input type="text" id="party_affiliation" name="party_affiliation"
+                            class="form-input mt-1 w-full rounded-md">
                     </label>
                 </div>
                 <div class="col-span-2 sm:col-span-1">
@@ -93,9 +103,12 @@
                         type="submit">Register</button>
                 </div>
             </form>
-            <div id="notification" class="hidden mt-4 p-4 bg-green-100 border border-green-400 text-green-700 rounded-md"></div>
+            <div id="notification"
+                class="hidden mt-4 p-4 bg-green-100 border border-green-400 text-green-700 rounded-md"></div>
         </div>
     </div>
+
+    <div id="notificationContainer" class="fixed top-4 right-4"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
@@ -118,6 +131,7 @@
         });
     </script>
     <script src="../backend/js/candStatus.js"></script>
+
 </body>
 
 </html>
