Frontend Framework Update

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK E-Voting System - Register</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/logreg.css">
+    <link rel="stylesheet" href="./css/output.css">
     <script src="../backend/js/validator001.js"></script>
 </head>
 
