--- a/frontend/vote.html
+++ b/frontend/vote.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK E-Voting System - Vote</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/output.css">
 </head>
 <style>
     body {
         background-image: url("https://i.ibb.co/M1B2vVj/photo-2024-05-22-23-45-31.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        backdrop-filter: brightness(50%) blur(3px);
+        background-position: center;
+        backdrop-filter: brightness(60%) blur(3px);
     }
 
     #mCont {
@@ -21,9 +22,9 @@
 </style>
 
 <body>
-    <div class="bg-white rounded-lg shadow-lg p-6 mb-8" id="mCont">
+    <div class="rounded-lg shadow-lg p-6 mb-8" id="mCont">
         <div class="container mx-auto p-8" id="content">
-            <h1 class="text-3xl font-bold mb-8">Vote</h1>
+            <h1 class="text-3xl font-bold mb-8 text-gray-800">Vote</h1>
             <form id="voteForm">
                 <div id="positions"></div>
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Submit
