--- a/frontend/voterReg.html
+++ b/frontend/voterReg.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK E-Voting System - Voter Registration</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/output.css">
 </head>
 
 <body class="bg-gray-100 flex items-center justify-center h-screen">
