--- a/frontend/vote.html
+++ b/frontend/vote.html
@@ -38,7 +38,7 @@
     <script src="../backend/js/alrVoted.js"></script>
     <script src="../backend/js/displayRules.js"></script>
     <script src="../backend/js/voteForm.js"></script>
-    <script src="./backend/js/chatbot.js"></script>
+    <script src="../backend/js/chatbot.js"></script>
 
 </body>
 
