--- a/index.html
+++ b/index.html
@@ -1,38 +1,90 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="cyberpunk">
+<html lang="en" data-theme="dracula">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK E-Voting System - Login</title>
+    <link rel="stylesheet" href="./frontend/css/fonts.css">
     <link rel="stylesheet" href="./frontend/css/output.css">
     <link rel="stylesheet" href="./frontend/css/logreg.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css">
     <script src="./backend/js/validator001.js"></script>
 </head>
+<style>
+    .leftB {
+        background-image: url("https://the-post-assets.sgp1.digitaloceanspaces.com/2020/08/SK.jpg");
+        background-repeat: no-repeat; background-position: center; background-size: cover;
+    }
+</style>
+<body>
+    <!-- component -->
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
 
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="w-full max-w-md p-8 space-y-6 bg-gray-800 rounded-lg shadow-md">
-        <h1 class="text-2xl font-bold text-center text-white">Login</h1>
-        <form action="./backend/login.php" method="post" class="space-y-4">
-            <div>
-                <label for="username" class="block text-sm font-medium text-white">Username:</label>
-                <input type="text" id="username" name="username" required
-                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+    <form action="./backend/login.php" method="post" class="space-y-4">
+        <div class="min-w-screen min-h-screen bg-gray-900 flex items-center justify-center px-5 py-5">
+            <div class="bg-gray-100 text-gray-500 rounded-3xl shadow-xl w-full overflow-hidden"
+                style="max-width:1000px">
+                <div class="md:flex w-full">
+                    <div class="hidden md:block w-1/2 bg-white py-10 px-10 shadow-sm leftB">
+                    </div>
+
+                    <div class="w-full md:w-1/2 py-10 px-5 md:px-10 bg-indigo-700 nsofia">
+                        <div class="text-center mb-10">
+                            <h1 class="font-bold text-3xl text-white nsofia">LOGIN</h1>
+                            <p class="text-gray-300 isofia">Enter your information to login</p>
+                        </div>
+                        <div>
+                            <div class="flex -mx-3">
+                                <div class="w-full px-3 mb-5">
+                                    <label for="username" class="text-xs font-semibold px-1 text-white">Username</label>
+                                    <div class="flex">
+                                        <div
+                                            class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center">
+                                            <i class="mdi mdi-email-outline text-white text-lg"></i>
+                                        </div>
+                                        <input type="text"
+                                            class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500"
+                                            id="username" name="username" placeholder="Username">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex -mx-3">
+                                <div class="w-full px-3 mb-12">
+                                    <label for="" class="text-xs font-semibold px-1 text-white">Password</label>
+                                    <div class="flex">
+                                        <div
+                                            class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center">
+                                            <i class="mdi mdi-lock-outline text-white text-lg"></i>
+                                        </div>
+                                        <input type="password"
+                                            class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500"
+                                            id="password" name="password" placeholder="************">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex -mx-3">
+                                <div class="w-full px-3 mb-5">
+                                    <button
+                                        class="block w-full max-w-xs mx-auto bg-white hover:bg-indigo5200 focus:bg-indigo-400 text-gray-500 rounded-lg px-3 py-3 font-semibold">LOGIN</button>
+                                </div>
+                            </div>
+                            <div class="flex justify-center">
+                                <div class="mx-3">
+                                    <a href="./frontend/register.html">
+                                        <p class="text-xs font-semibold px-1 text-gray-300">No account yet? Register!</p>
+                                    </a>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-                <label for="password" class="block text-sm font-medium text-white">Password:</label>
-                <input type="password" id="password" name="password" required
-                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
-            </div>
-            <div class="flex items-center justify-between">
-                <input type="submit" value="Login"
-                    class="w-full py-2 px-4 bg-indigo-600 text-white rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 cursor-pointer">
-            </div>
-            <div class="text-center">
-                <a href="./frontend/register.html" class="text-sm text-indigo-500 hover:underline">Register</a>
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
 
     <div id="notificationContainer" class="fixed top-4 right-4"></div>
 
