--- a/frontend/vote.html
+++ b/frontend/vote.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK E-Voting System - Vote</title>
     <link rel="stylesheet" href="./css/output.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <style>
     body {
@@ -18,6 +19,24 @@
 
     #mCont {
         background-color: rgba(255, 255, 255, 0.916)
+    }
+
+    .custom-radio {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        width: 20px;
+        height: 20px;
+        border: 2px solid #4F46E5;
+        border-radius: 50%;
+        outline: none;
+        cursor: pointer;
+        transition: border-color 0.3s ease;
+    }
+
+    .custom-radio:checked {
+        background-color: #4F46E5;
+        border-color: #4F46E5;
     }
 </style>
 
